[tool.poetry]
name = "py-lanchain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain-community = "^0.3.13"
langgraph = "^0.2.60"
langsmith = "^0.2.7"
ipython = "^8.31.0"
langchain-ollama = "^0.2.2"
matplotlib = "^3.10.0"
gpt4all = {extras = ["cuda"], version = "^2.8.2"}
langchain-openai = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"